--- a/style.css
+++ b/style.css
@@ -6,17 +6,35 @@
 body{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
-  font-size: 20px;
-  
+  font-size: 22.5px;
+  background-color: #098ff6;
+  color: whitesmoke;
+  width: 100vw;
+  height: 100vh;
+  margin-top: 50px;
+  overflow: hidden;
+}
+span{
+  color: #000000;
+}
+input{
+  border-radius: 2px;
+  background-color: #555353;
+  color: whitesmoke;
+  border: 2px solid #000;
+  padding: 5px;
+  text-align: center;
+  font-size: 18px;
 }
 .start-btn, .reset-btn, .check-btn{
-  background-color: #575757;
+  background-color: #555353;
   margin: 20px auto;
   padding: 8px 25px;
   color: #fff;
-  border: none;
+  border: 2px solid #000;
   border-radius: 5px;
   font-size: 20px;
+  cursor: pointer;
 }
 .main-div{
   visibility: hidden;
@@ -27,11 +45,12 @@ body{
 }
 .wrong{
   background-color: #fe4c4c;
-  padding: 5px 20px;
-  margin: 25px 500px;
+  padding: 10px;
+  margin-top: 25px;
 }
 .success{
   background-color: #7efe4c;
-  padding: 5px 20px;
-  margin: 25px 500px;
+  margin-top: 25px;
+  padding: 10px;
+  
 }
